samples/etc/c.pad
{@
    arr = []
    setattr(arr, "a", 1)  // error

    di = {}
    setattr(di, "a", 1)  // error
@}